--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h3>Hello EveryOne I am Kajal</h3>
     <h3>Hello EveryOne I am Reshma</h3>
+    <h3>Hello EveryOne I am Rohit</h3>
    
    
 </body>
