--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h3>Hello EveryOne I am Kajal</h3>
     <h3>Hello EveryOne I am Reshma</h3>
-   
+    <h3>Hello Everyone I am Rushikesh</h3>
    
 </body>
 </html>
